testing changes for netherrack generator